0.3.6
=====
- Added year, month, day, hour, minute, second
  variables to file_template.  #59

- Added 'primary' to the list of constraint types
  recognized for MySQL drop_constraint().

0.3.5
=====
- [bug] Fixed issue whereby reflected server defaults
  wouldn't be quoted correctly; uses repr() now.
  #31

- [bug] Fixed issue whereby when autogenerate would
  render create_table() on the upgrade side for a
  table that has a Boolean type, an unnecessary
  CheckConstraint() would be generated. #58

- [feature] Implemented SQL rendering for
  CheckConstraint() within autogenerate upgrade,
  including for literal SQL as well as SQL Expression
  Language expressions.

0.3.4
=====
- [bug] Fixed command-line bug introduced by the
  "revision_environment" feature.

0.3.3
=====
NOTE: 0.3.3 was released with a command line bug,
so please skip right to 0.3.4

- [feature] New config argument
  "revision_environment=true", causes env.py to
  be run unconditionally when the "revision" command
  is run, to support script.py.mako templates with
  dependencies on custom "template_args".

- [feature] Added "template_args" option to configure()
  so that an env.py can add additional arguments
  to the template context when running the
  "revision" command.  This requires either --autogenerate
  or the configuration directive "revision_environment=true".

- [bug] Added "type" argument to op.drop_constraint(),
  and implemented full constraint drop support for
  MySQL.  CHECK and undefined raise an error.
  MySQL needs the constraint type
  in order to emit a DROP CONSTRAINT. #44

- [feature] Added version_table argument to
  EnvironmentContext.configure(), allowing for the
  configuration of the version table name. #34

- [feature] Added support for "relative" migration
  identifiers, i.e. "alembic upgrade +2",
  "alembic downgrade -1".  Courtesy
  Atsushi Odagiri for this feature.

- [bug] Fixed bug whereby directories inside of
  the template directories, such as __pycache__